[gd_scene load_steps=5 format=3 uid="uid://cosap7ka4jc6c"]

[ext_resource type="Script" path="res://Scripts/UI/Puzzle/PuzzleUiManager.gd" id="1_e57yp"]
[ext_resource type="Script" path="res://Scripts/UI/Puzzle/PuzzleMainScreen.gd" id="2_fxt11"]
[ext_resource type="Script" path="res://Scripts/UI/Puzzle/States/PuzzleUiPlayState.gd" id="3_aj75g"]
[ext_resource type="Script" path="res://Scripts/UI/Puzzle/States/PuzzleUiWinState.gd" id="4_4ulfu"]

[node name="PuzzleUiManager" type="CanvasLayer" node_paths=PackedStringArray("main_screen", "play_state", "win_state")]
script = ExtResource("1_e57yp")
main_screen = NodePath("MainScreen")
play_state = NodePath("States/PuzzleUiPlayState")
win_state = NodePath("States/PuzzleUiWinState")

[node name="MainScreen" type="Control" parent="." node_paths=PackedStringArray("context_button", "reset_button", "win_text")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_fxt11")
context_button = NodePath("MarginContainer/HBoxContainer/Context Button")
reset_button = NodePath("MarginContainer/HBoxContainer/Reset Button")
win_text = NodePath("Win Text")

[node name="MarginContainer" type="MarginContainer" parent="MainScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainScreen/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="Reset Button" type="Button" parent="MainScreen/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Reset"

[node name="Context Button" type="Button" parent="MainScreen/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "<context>"

[node name="Win Text" type="Label" parent="MainScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 181.0
offset_right = 20.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2
text = "WIN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="States" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PuzzleUiPlayState" type="Control" parent="States"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_aj75g")

[node name="PuzzleUiWinState" type="Control" parent="States"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_4ulfu")
